Make "Featured" bigger

--- a/hacksoft/templates/website/blog_posts_page.html
+++ b/hacksoft/templates/website/blog_posts_page.html
@@ -30,7 +30,7 @@
 
   <div class="featured-article">
     {% if self.featured_article %}
-    <div class="blog-post-section-heading">Featured</div>
+    <h1 class="blog-post-section-heading">Featured</h1>
     <div class="blog-post-container featured-blog-post">
 
       <a href="{{ self.featured_article.url }}">
