--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -1618,9 +1618,9 @@ a {
 }
 .blog-post-section-heading {
     text-align: center;
-    font-size: 14px;
     font-weight: normal;
-    padding: 10px;
+    font-size: 1.5em;
+    margin-bottom: 5px;
     font-family: 'Open Sans', serif;
     text-transform: uppercase;
 }
