--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -1696,6 +1696,11 @@ a {
     code {
       background-color: #f8f8f8;
     }
+    blockquote {
+      background-color: #f8f8f8;
+      margin: 0;
+      padding: 2px;
+    }
     a {
       color: #F79824;
     }
