--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -1630,6 +1630,8 @@ a {
     -moz-box-sizing: border-box;    /* Firefox, other Gecko */
     box-sizing: border-box;         /* Opera/IE 8+ */
     padding:10px;
+    position: relative;
+
     @media screen and (max-width: 768px){
         width:50%;
     }
@@ -1722,6 +1724,9 @@ a {
         box-shadow: 0px 10px 15px #ababab;
         padding: 10px;
         margin: 10px 5px 15px 5px;
+	padding-bottom: 20px;
+	height: 100%;
+	box-sizing: border-box;
         .head-image {
             width: 100%;
             height: 190px;
@@ -1741,6 +1746,9 @@ a {
               color:silver;
               text-align: right;
               padding-top:10px;
+	      position: absolute;
+	      bottom: 10px;
+	      right: 20px;
               span {
                 font-size: 16px;
               }
