Filter page children in get_context()

--- a/hacksoft/templates/website/blog_posts_page.html
+++ b/hacksoft/templates/website/blog_posts_page.html
@@ -71,7 +71,7 @@
   </div>
 
   <div class="blog-posts-container">
-  {% for page in self.get_children.specific %}
+  {% for page in blog_posts.specific %}
     <div class="blog-post-container">
 
       <a href="{{ page.url }}">
