--- a/hacksoft/static/css/main.css
+++ b/hacksoft/static/css/main.css
@@ -1298,7 +1298,8 @@ a {
     .blog-post-container .blog-post .head-image {
       width: 100%;
       height: 190px;
-      background-position: center; }
+      background-position: center;
+      background-size: cover; }
     .blog-post-container .blog-post .blog-post-body {
       padding: 10px; }
       .blog-post-container .blog-post .blog-post-body .title {
