--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -1731,6 +1731,7 @@ a {
             width: 100%;
             height: 190px;
             background-position: center;
+            background-size: cover;
         }
         .blog-post-body {
             padding:10px;
