--- a/hacksoft/static/css/main.css
+++ b/hacksoft/static/css/main.css
@@ -1191,6 +1191,9 @@ a {
 
 .blog-posts-container {
   display: flex; }
+  @media screen and (max-width: 425px) {
+    .blog-posts-container {
+      display: block; } }
 
 .featured-article {
   position: relative;
@@ -1213,8 +1216,7 @@ a {
   /* Firefox, other Gecko */
   box-sizing: border-box;
   /* Opera/IE 8+ */
-  padding: 10px;
-  position: relative; }
+  padding: 10px; }
   @media screen and (max-width: 768px) {
     .blog-post-container {
       width: 50%; } }
@@ -1236,65 +1238,71 @@ a {
       @media screen and (max-width: 768px) {
         .blog-post-container.featured-blog-post:before {
           height: 105%; } }
-    .blog-post-container.featured-blog-post .blog-post {
-      background-color: white;
-      display: flex; }
+  .blog-post-container.featured-blog-post .blog-post {
+    background-color: white;
+    display: flex; }
+    @media screen and (max-width: 768px) {
+      .blog-post-container.featured-blog-post .blog-post {
+        flex-direction: column;
+        padding: 20px; } }
+    @media screen and (max-width: 425px) {
+      .blog-post-container.featured-blog-post .blog-post {
+        padding: 10px; } }
+    .blog-post-container.featured-blog-post .blog-post .head-image {
+      min-height: 300px;
+      height: auto;
+      width: 60%; }
       @media screen and (max-width: 768px) {
-        .blog-post-container.featured-blog-post .blog-post {
-          flex-direction: column;
-          padding: 20px; } }
+        .blog-post-container.featured-blog-post .blog-post .head-image {
+          width: auto; } }
       @media screen and (max-width: 425px) {
-        .blog-post-container.featured-blog-post .blog-post {
-          padding: 10px; } }
-      .blog-post-container.featured-blog-post .blog-post .head-image {
-        min-height: 300px;
-        height: auto;
-        width: 60%; }
-        @media screen and (max-width: 768px) {
-          .blog-post-container.featured-blog-post .blog-post .head-image {
-            width: auto; } }
+        .blog-post-container.featured-blog-post .blog-post .head-image {
+          height: 190px;
+          min-height: initial; } }
+    .blog-post-container.featured-blog-post .blog-post .blog-post-body {
+      padding: 0 20px;
+      width: 40%; }
+      @media screen and (max-width: 768px) {
+        .blog-post-container.featured-blog-post .blog-post .blog-post-body {
+          width: auto;
+          padding: 0px; } }
+      .blog-post-container.featured-blog-post .blog-post .blog-post-body .responsive-author-images {
+        display: none; }
         @media screen and (max-width: 425px) {
-          .blog-post-container.featured-blog-post .blog-post .head-image {
-            height: 190px;
-            min-height: initial; } }
-      .blog-post-container.featured-blog-post .blog-post .blog-post-body {
-        padding: 0 20px;
-        width: 40%;
-        position: relative; }
-        @media screen and (max-width: 768px) {
-          .blog-post-container.featured-blog-post .blog-post .blog-post-body {
-            width: auto;
-            padding: 0px; } }
-        .blog-post-container.featured-blog-post .blog-post .blog-post-body .responsive-author-images {
-          display: none; }
+          .blog-post-container.featured-blog-post .blog-post .blog-post-body .responsive-author-images {
+            display: block; } }
+        .blog-post-container.featured-blog-post .blog-post .blog-post-body .responsive-author-images .avatar {
+          float: right;
+          margin: -35px 5px 0 0; }
           @media screen and (max-width: 425px) {
-            .blog-post-container.featured-blog-post .blog-post .blog-post-body .responsive-author-images {
+            .blog-post-container.featured-blog-post .blog-post .blog-post-body .responsive-author-images .avatar {
               display: block; } }
-          .blog-post-container.featured-blog-post .blog-post .blog-post-body .responsive-author-images .avatar {
-            float: right;
-            margin: -35px 5px 0 0; }
-            @media screen and (max-width: 425px) {
-              .blog-post-container.featured-blog-post .blog-post .blog-post-body .responsive-author-images .avatar {
-                display: block; } }
-        .blog-post-container.featured-blog-post .blog-post .blog-post-body .title {
-          font-size: 30px; }
-        .blog-post-container.featured-blog-post .blog-post .blog-post-body .author:after {
-          margin: 0 10px; }
-        .blog-post-container.featured-blog-post .blog-post .blog-post-body .avatar {
-          margin: 0;
-          float: none; }
-          @media screen and (max-width: 425px) {
-            .blog-post-container.featured-blog-post .blog-post .blog-post-body .avatar {
-              display: none; } }
-        .blog-post-container.featured-blog-post .blog-post .blog-post-body .author-name {
-          display: inline-block; }
+      .blog-post-container.featured-blog-post .blog-post .blog-post-body .title {
+        font-size: 30px; }
+      .blog-post-container.featured-blog-post .blog-post .blog-post-body .description {
+        position: relative;
+        padding-bottom: 20px; }
+        @media screen and (max-width: 425px) {
+          .blog-post-container.featured-blog-post .blog-post .blog-post-body .description {
+            padding-bottom: 30px; } }
+      .blog-post-container.featured-blog-post .blog-post .blog-post-body .author:after {
+        margin: 0 10px; }
+      .blog-post-container.featured-blog-post .blog-post .blog-post-body .avatar {
+        margin: 0;
+        float: none; }
+        @media screen and (max-width: 425px) {
+          .blog-post-container.featured-blog-post .blog-post .blog-post-body .avatar {
+            display: none; } }
+      .blog-post-container.featured-blog-post .blog-post .blog-post-body .author-name {
+        display: inline-block; }
   .blog-post-container .blog-post {
     box-shadow: 0px 10px 15px #ababab;
     padding: 10px;
     margin: 10px 5px 15px 5px;
     padding-bottom: 20px;
     height: 100%;
-    box-sizing: border-box; }
+    box-sizing: border-box;
+    position: relative; }
     .blog-post-container .blog-post .head-image {
       width: 100%;
       height: 190px;
