--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -1608,7 +1608,10 @@ a {
 }
 
 .blog-posts-container {
-    display:flex;
+    display: flex;
+    @media screen and (max-width: 425px) {
+        display: block;
+    }
 }
 
 .featured-article {
@@ -1630,7 +1633,6 @@ a {
     -moz-box-sizing: border-box;    /* Firefox, other Gecko */
     box-sizing: border-box;         /* Opera/IE 8+ */
     padding:10px;
-    position: relative;
 
     @media screen and (max-width: 768px){
         width:50%;
@@ -1654,69 +1656,73 @@ a {
                 height:105%;
             }
         }
-        .blog-post {
-            background-color: white;
-            display:flex;
+    }
+    &.featured-blog-post .blog-post {
+        background-color: white;
+        display:flex;
 
+        @media screen and (max-width: 768px) {
+            flex-direction:column;
+            padding:20px;
+        }
+        @media screen and (max-width: 425px) {
+            padding:10px;
+        }
+        .head-image {
+            min-height: 300px;
+            height:auto;
+            width:60%;
             @media screen and (max-width: 768px) {
-                flex-direction:column;
-                padding:20px;
+                width:auto;
             }
             @media screen and (max-width: 425px) {
-                padding:10px;
+                height:190px;
+                min-height:initial;
             }
-            .head-image {
-                min-height: 300px;
-                height:auto;
-                width:60%;
-                
-                @media screen and (max-width: 768px) {
-                    width:auto;
-                }
+        }
+        .blog-post-body {
+            padding:0 20px;
+            width: 40%;
+            @media screen and (max-width: 768px) {
+                width:auto;
+                padding:0px;
+            }
+            .responsive-author-images {
+                display:none;
                 @media screen and (max-width: 425px) {
-                    height:190px;
-                    min-height:initial;
+                    display:block;
                 }
-            }
-            .blog-post-body {
-                padding:0 20px;
-                width: 40%;
-                position: relative;
-                @media screen and (max-width: 768px) {
-                    width:auto;
-                    padding:0px;
-                }
-                .responsive-author-images {
-                    display:none;
+                .avatar {
+                    float:right;
+                    margin:-35px 5px 0 0;
                     @media screen and (max-width: 425px) {
                         display:block;
                     }
-                    .avatar {
-                        float:right;
-                        margin:-35px 5px 0 0;
-                        @media screen and (max-width: 425px) {
-                            display:block;
-                        }
-                    }
                 }
+            }
 
-                .title {
-                    font-size: 30px;
+            .title {
+                font-size: 30px;
+            }
+            .description {
+                position:relative;
+                padding-bottom:20px;
+                @media screen and (max-width:425px) {
+                    padding-bottom:30px;
                 }
-                .author:after {
-                    margin:0 10px;
+            }
+            .author:after {
+                margin:0 10px;
+            }
+            .avatar {
+                @media screen and (max-width: 425px) {
+                    display:none;
                 }
-                .avatar {
-                    @media screen and (max-width: 425px) {
-                        display:none;
-                    }
-                    margin:0;
-                    float:none;
-                }
-                .author-name {
-                    display:inline-block;
-                }
-             
+                margin:0;
+                float:none;
+            }
+            .author-name {
+                display:inline-block;
             }
         }
     }
@@ -1724,9 +1730,11 @@ a {
         box-shadow: 0px 10px 15px #ababab;
         padding: 10px;
         margin: 10px 5px 15px 5px;
-	padding-bottom: 20px;
-	height: 100%;
-	box-sizing: border-box;
+        padding-bottom: 20px;
+        height: 100%;
+        box-sizing: border-box;
+        position:relative;
+
         .head-image {
             width: 100%;
             height: 190px;
