--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -1804,6 +1804,7 @@ a {
 .blog-post-page {
     code {
       background-color: #f8f8f8;
+      word-wrap:break-word;
     }
     blockquote {
       background-color: #f8f8f8;
