--- a/hacksoft/static/css/main.css
+++ b/hacksoft/static/css/main.css
@@ -29,7 +29,8 @@ a {
   position: absolute;
   width: 100%;
   height: auto !important;
-  padding-bottom: 170px; }
+  padding-bottom: 170px;
+  overflow-x: hidden; }
 
 .dimmed-image {
   position: relative;
@@ -1215,10 +1216,10 @@ a {
   box-sizing: border-box;
   /* Opera/IE 8+ */
   padding: 10px; }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1300px) {
     .blog-post-container {
       width: 50%; } }
-  @media screen and (max-width: 425px) {
+  @media screen and (max-width: 767px) {
     .blog-post-container {
       width: 100%; } }
   .blog-post-container.featured-blog-post {
@@ -1230,12 +1231,12 @@ a {
       position: absolute;
       left: -100%;
       width: 300%;
-      height: 120%;
+      height: 105%;
       margin-top: -70px;
       z-index: -1; }
-      @media screen and (max-width: 1024px) {
+      @media screen and (min-width: 2560px) and (max-width: 1440px) {
         .blog-post-container.featured-blog-post:before {
-          height: 105%; } }
+          height: 120%; } }
   .blog-post-container.featured-blog-post .blog-post {
     background-color: white;
     display: flex; }
