--- a/hacksoft/static/css/main.css
+++ b/hacksoft/static/css/main.css
@@ -8,7 +8,8 @@ body {
   color: #222;
   overflow-x: hidden;
   font-size: 16px;
-  height: 100%; }
+  height: 100%;
+  width: 100%; }
 
 a {
   color: inherit;
