--- a/hacksoft/static/css/main.css
+++ b/hacksoft/static/css/main.css
@@ -30,8 +30,7 @@ a {
   position: absolute;
   width: 100%;
   height: auto !important;
-  padding-bottom: 170px;
-  overflow-x: hidden; }
+  padding-bottom: 170px; }
 
 .dimmed-image {
   position: relative;
