--- a/hacksoft/templates/404.html
+++ b/hacksoft/templates/404.html
@@ -4,6 +4,19 @@
 
 {% block content %}
 
+<style>
+.header {
+	position:static;
+}
+.footer {
+	position:absolute;
+	bottom:0;
+}
+.page-wrapper {
+	position:static;
+}
+</style>
+
 <div class="content-wrapper" >
 	<h1>Page Not found</h1>
 
