--- a/hacksoft/templates/404.html
+++ b/hacksoft/templates/404.html
@@ -11,18 +11,20 @@
 .header {
 	position:static;
 }
-.footer {
-	position:fixed;
-	bottom:0;
-}
 .page-wrapper {
-	position:static;
+	position:absolute;
+	height:100%;
+	padding-bottom:200px;
+	box-sizing: border-box;
 }
 .sadpanda {
 	margin:auto;
 	display:block;
 	max-width: 100%;
 	width:500px;
+}
+.footer {
+	bottom: 0px;
 }
 </style>
 
