--- a/hacksoft/templates/404.html
+++ b/hacksoft/templates/404.html
@@ -13,7 +13,7 @@
 }
 .page-wrapper {
 	position:absolute;
-	height:100%;
+	height:100% !important;
 	padding-bottom:200px;
 	box-sizing: border-box;
 	min-height:750px;
