Add styles for subscribe box

--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -1802,6 +1802,14 @@ a {
     font-weight: bold;
 }
 
+.subscribe {
+  margin-top: 1em;
+
+  .subscribe-form {
+    margin: 0 auto;
+  }
+}
+
 .blog-post-page {
     code {
       background-color: #f8f8f8;
