--- a/hacksoft/templates/website/blog_post.html
+++ b/hacksoft/templates/website/blog_post.html
@@ -45,9 +45,7 @@
   </div>
 
   <div class="subscribe">
-    {% autoescape off %}
-    <script type="text/javascript" src="//static.mailerlite.com/data/webforms/444929/l0f6i4.js?v2"></script>
-    {% endautoescape %}
+    {% include "external/mailerlite.html" %}
   </div>
 
   <div id="disqus_thread">
