--- a/hacksoft/templates/tags/footer.html
+++ b/hacksoft/templates/tags/footer.html
@@ -32,6 +32,9 @@
         <div>
           {{ footer.popup_text|richtext }}
         </div>
+        <div class="footer-subscribe">
+          {% include "external/mailerlite_footer.html" %}
+        </div>
       </div>
     </div>
   </div>
