--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -9,6 +9,7 @@
     <title>{{ self.seo_title }}</title>
     <meta name="description" content="{{ self.search_description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+    <meta name="google-site-verification" content="XF9CWpYkgRBnLnIx7pJTjrNOvy3-LcsjJSzsi9OUqFw" />
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
         <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -17,7 +18,6 @@
     {% block meta %}
 
     {% endblock meta %}
-    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,700' rel='stylesheet' type='text/css'>
     <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
