--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -1646,8 +1646,8 @@ a {
             display:block;
             background-color:#efefef;
             position:absolute;
-            left:-100%;
-            width:300%;
+            left:-5vw;
+            width:100vw;
             height:105%;
             margin-top:-70px;
             z-index:-1;
