--- a/hacksoft/templates/external/mailerlite_footer.html
+++ b/hacksoft/templates/external/mailerlite_footer.html
@@ -1,1 +1,1 @@
-<script type="text/javascript" src="//static.mailerlite.com/data/webforms/445003/q5c2f1.js?v1"></script>
+<script type="text/javascript" src="https://static.mailerlite.com/data/webforms/445003/q5c2f1.js?v5"></script>
