--- a/hacksoft/templates/website/home_page.html
+++ b/hacksoft/templates/website/home_page.html
@@ -6,13 +6,11 @@
 
   <div class="new header-image-background dimmed-image-background">
     <div class="new overlay"></div>
-
     <div class="video-container" style="background-image:url({% static 'images/homepage-header.png' %})">
       <video preload muted loop autoplay id="player">
         <source type="video/webm" src="{% static 'hack.webm' %}">
       </video>
     </div>
-
   </div>
 
   <div class="new header-image-frame">
@@ -31,9 +29,9 @@
 </div>
 
 <div class="page-content">
-  <div class="content-wrapper" >
 
-    <div class="section home-page-lead">
+  <div class="section home-page-lead">
+    <div class="content-wrapper">
       <h1 class="lead-text">{{ page.intro_h1 }}</h1>
       <h2 class="lead-subtext">{{ page.intro_h2 }}</h2>
 
@@ -41,38 +39,29 @@
         {% image page.intro_image original  %}
       </div>
     </div>
+  </div>
 
-<!--     <div class="section how-we-work">
-
-      <div class="section-heading">
-        <div>
-          <p>{{ page.how_we_work_title }}</p>
-        </div>
+  <div class="section technologies-we-use">
+    <div class="section-heading">
+      <div>
+        <p>{{ page.technologies_we_use_title }}</p>
       </div>
-      <a href="/how-we-work/">
-        {% image page.how_we_work_image max-1280x450 class="how-we-work-image" %}
-      </a>
-    </div> -->
-
-    <div class="section technologies-we-use">
-      <div class="section-heading">
-        <div>
-         <p>{{ page.technologies_we_use_title }}</p>
-       </div>
-     </div>
-     <div class="section-content-row">
-      <div class="align-center panda-pic">
-        {% image page.technologies_we_use_image original as tech_panda %}
+    </div>
+    <div class="section-content-row">
+      <div class="content-wrapper">
+        <div class="align-center panda-pic">
+          {% image page.technologies_we_use_image original as tech_panda %}
           <img src="{{tech_panda.url}}" class="technologies-panda"/>
-      </div>
-      <div class="section-content-row align-center primary-focus-text technologies-text">
-        {{ page.technologies_we_use_center|richtext }}
-      </div>
-      <div class="section-content-row align-center technologies-logos">
-        {% for relation in page.technologies_placement.all %}
-          {% image relation.technology.logo max-100x100 as tech_logo %}
-          <img src="{{ tech_logo.url }}" class="filter_image" alt="{{ relation.technology.name }}" title="{{ relation.technology.name }}" />
-        {% endfor %}
+        </div>
+        <div class="section-content-row align-center primary-focus-text technologies-text">
+          {{ page.technologies_we_use_center|richtext }}
+        </div>
+        <div class="section-content-row align-center technologies-logos">
+          {% for relation in page.technologies_placement.all %}
+            {% image relation.technology.logo max-100x100 as tech_logo %}
+            <img src="{{ tech_logo.url }}" class="filter_image" alt="{{ relation.technology.name }}" title="{{ relation.technology.name }}" />
+          {% endfor %}
+        </div>
       </div>
     </div>
   </div>
@@ -88,7 +77,7 @@
         {{ page.our_team_center|richtext }}
       </div>
       {% image page.team_image_main original as team_photo %}
-      <div class="section-content-row align-center our-team-images" style="background-image:url({{team_photo.url}})"></div>
+      <div class="section-content-row align-center our-team-images" style="background-image:url({{team_photo.url}})" />
     </div>
   </div>
 
@@ -99,24 +88,25 @@
       </div>
     </div>
     <div class="section-content">
-      <div class="section-content-row align-center our-team-text">
-        <div>
-          {{ page.portfolio_center|richtext }}
+      <div class="content-wrapper">
+        <div class="section-content-row align-center our-team-text">
+          <div>
+            {{ page.portfolio_center|richtext }}
+          </div>
+        </div>
+        <div class="row box-container">
+        {% for client in clients %}
+            <div class="client-box" data-client-number="{{ forloop.counter }}">
+              {% image client.logo original as client_logo %}
+              <a href="/our-clients/">
+                <img src="{{client_logo.url}}" alt="{{ client.name }}" title="{{ client.name }}" class="filter_image box-logo"/>
+              </a>
+            </div>
+        {% endfor %}
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="row box-container">
-    {% for client in clients %}
-        <div class="client-box" data-client-number="{{ forloop.counter }}">
-          {% image client.logo original as client_logo %}
-          <a href="/our-clients/">
-            <img src="{{client_logo.url}}" alt="{{ client.name }}" title="{{ client.name }}" class="filter_image box-logo"/>
-          </a>
-        </div>
-    {% endfor %}
-    </div>
-
-</div>
 </div>
 {% endblock content %}
