Fix how we work page

--- a/hacksoft/templates/website/home_page.html
+++ b/hacksoft/templates/website/home_page.html
@@ -77,7 +77,7 @@
         {{ page.our_team_center|richtext }}
       </div>
       {% image page.team_image_main original as team_photo %}
-      <div class="section-content-row align-center our-team-images" style="background-image:url({{team_photo.url}})" />
+      <div class="section-content-row align-center our-team-images" style="background-image:url({{team_photo.url}})"></div>
     </div>
   </div>
 
@@ -107,6 +107,5 @@
       </div>
     </div>
   </div>
-
 </div>
 {% endblock content %}
