--- a/hacksoft/templates/website/blog_posts_page.html
+++ b/hacksoft/templates/website/blog_posts_page.html
@@ -9,18 +9,19 @@
 
 
 {% block content %}
-<div class="new technologies-we-use-heading">
-  {% image page.header_image max-1366x1366 as header_image %}
-  <div class="new static-header dimmed-image slightly-down" style="background-image: url({{header_image.url}})">
-    <div class="new heading">
-      <p>{{page.header_text|richtext}}</p>
+<div class="page-content">
+  <div class="new technologies-we-use-heading">
+    {% image page.header_image max-1366x1366 as header_image %}
+    <div class="new static-header dimmed-image slightly-down" style="background-image: url({{header_image.url}})">
+      <div class="new heading">
+        <p>{{page.header_text|richtext}}</p>
+      </div>
+      <div class="new scroll-down-arrow">
+        <img class="filer_image " alt="scroll_down_arrow.png" src="{% static  'images/header/scroll_down_arrow.png'%}" />
+      </div>
+      <div class="dim"></div>
     </div>
-    <div class="new scroll-down-arrow">
-      <img class="filer_image " alt="scroll_down_arrow.png" src="{% static  'images/header/scroll_down_arrow.png'%}" />
-    </div>
-    <div class="dim"></div>
   </div>
-</div>
 
   <div class="featured-article">
     {% if self.featured_article %}
@@ -64,49 +65,46 @@
     {% endif %}
   </div>
 
-
-<div class="content-wrapper" >
-
-  <div class="section-content">
-    {{ page.text|richtext }}
-  </div>
-
-  <div class="blog-posts-container">
-  {% for page in blog_posts.specific %}
-    <div class="blog-post-container">
-
-      <a href="{{ page.url }}">
-        <div class="blog-post">
-          {% image page.cover_image width-600 as tmp_photo %}
-          <div class="head-image" style="background-image:url({{ tmp_photo.url }})">
-          </div>
-          {% for author in page.authors.all %}
-            {% image author.initial_photo width-150 as avatar %}
-            <div class="avatar" style="background-image:url({{ avatar.url }})"></div>
-          {% endfor %}
-          <div class="blog-post-body">
-            <div class="title">
-              {{ page.title }}
-            </div>
-            <div class="authors">
-              {% for author in page.authors.all %}
-                <div class="author">
-                  {{ author.name }}
-                </div>
-              {% endfor %}
-            </div>
-            <div class="description">
-              {{ page.index_text }}
-            </div>
-            <div class="date">
-              Posted: <span>{{ page.date|date:"SHORT_DATE_FORMAT" }}</span>
-            </div>
-          </div>
-        </div>
-      </a>
+  <div class="content-wrapper" >
+    <div class="section-content">
+      {{ page.text|richtext }}
     </div>
-  {% endfor %}
-  </div>
+    <div class="blog-posts-container">
+    {% for page in blog_posts.specific %}
+      <div class="blog-post-container">
 
+        <a href="{{ page.url }}">
+          <div class="blog-post">
+            {% image page.cover_image width-600 as tmp_photo %}
+            <div class="head-image" style="background-image:url({{ tmp_photo.url }})">
+            </div>
+            {% for author in page.authors.all %}
+              {% image author.initial_photo width-150 as avatar %}
+              <div class="avatar" style="background-image:url({{ avatar.url }})"></div>
+            {% endfor %}
+            <div class="blog-post-body">
+              <div class="title">
+                {{ page.title }}
+              </div>
+              <div class="authors">
+                {% for author in page.authors.all %}
+                  <div class="author">
+                    {{ author.name }}
+                  </div>
+                {% endfor %}
+              </div>
+              <div class="description">
+                {{ page.index_text }}
+              </div>
+              <div class="date">
+                Posted: <span>{{ page.date|date:"SHORT_DATE_FORMAT" }}</span>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+    {% endfor %}
+    </div>
+  </div>
 </div>
 {% endblock content %}
