--- a/hacksoft/templates/website/home_page.html
+++ b/hacksoft/templates/website/home_page.html
@@ -81,7 +81,7 @@
     </div>
   </div>
 
-  <div class="section">
+  <div class="section portfolio">
     <div class="section-heading">
       <div>
         <p>{{ page.portfolio_title }}</p>
