Add clutch rating to footer

--- a/hacksoft/templates/tags/footer.html
+++ b/hacksoft/templates/tags/footer.html
@@ -17,7 +17,8 @@
           <div class="copyright">
             <p>
               © 2017 HackSoft.
-           </p>
+            </p>
+            <div class="clutch-widget" data-url="https://clutch.co" data-widget-type="1" data-height="50" data-darkbg="1" data-clutchcompany-id="534443"></div>
           </div>
         </div>
       </div>
