Add initial structure for `HackCast` page

--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -59,6 +59,9 @@
             <li class="child sibling black-active-text {% menu_active 'contact-us' %}">
               <a href="/contact-us/">Contact Us</a>
             </li>
+            <li class="child sibling black-active-text {% menu_active 'hackcast' %}">
+              <a href="/hackcast/">HackCast</a>
+            </li>
             <li class="child sibling black-active-text {% menu_active 'blog' %}">
               <a href="/blog/">Blog</a>
             </li>
