--- a/hacksoft/static/css/main.css
+++ b/hacksoft/static/css/main.css
@@ -1452,4 +1452,11 @@ h1.top-heading {
 .twitter-tweet {
   margin: 0 auto; }
 
+.hack-cast-page .episode-container .episode-title {
+  font-weight: bold; }
+.hack-cast-page a {
+  color: #f79824; }
+  .hack-cast-page a:hover {
+    border-bottom: 2px solid #f79824; }
+
 /*# sourceMappingURL=main.css.map */
