Don't hardcode current year

--- a/hacksoft/templates/tags/footer.html
+++ b/hacksoft/templates/tags/footer.html
@@ -16,7 +16,7 @@
           </ul>
           <div class="copyright">
             <p>
-              © 2017 HackSoft.
+              © {% now "Y" %} HackSoft.
             </p>
             <div class="clutch-widget" data-url="https://clutch.co" data-widget-type="1" data-height="50" data-darkbg="1" data-clutchcompany-id="534443"></div>
           </div>
