--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -1934,3 +1934,12 @@ h1.top-heading {
     }
   }
 }
+
+.testimonial-page {
+  h1 > a {
+    color: #f79824;
+    &:hover {
+        border-bottom: 2px solid #f79824;
+    }
+  }
+}
