Align header with clutch widget

--- a/hacksoft/static/css/main.css
+++ b/hacksoft/static/css/main.css
@@ -1463,6 +1463,8 @@ h1.top-heading {
   .hack-cast-page a:hover {
     border-bottom: 2px solid #f79824; }
 
+.testimonial-page h1 {
+  padding-left: 2rem; }
 .testimonial-page h1 > a {
   color: #f79824; }
   .testimonial-page h1 > a:hover {
