--- a/hacksoft/templates/website/portfolio_page.html
+++ b/hacksoft/templates/website/portfolio_page.html
@@ -19,7 +19,7 @@
   <div class="section how-we-work">
     <div class="content-wrapper" >
       <div class="row box-container">
-        {% for placement in self.clients_placement.all %}
+        {% for placement in clients %}
           <div class="client-box" data-client-number="{{ forloop.counter }}">
             {% image placement.client.logo original as client_logo %}
             <img src="{{client_logo.url}}" alt="{{ placement.client.name }}" title="{{ placement.client.name }}"class="filter_image wow flipInX box-logo"/>
@@ -28,7 +28,7 @@
       </div>
     </div>
 
-    {% for placement in self.clients_placement.all %}
+    {% for placement in clients %}
       <div class="section-heading" id="clinet-number-{{ forloop.counter }}">
         <div><strong>{{ placement.client.name }}</strong></div>
       </div>
